# labs

./: .gitignore
bullscows/: ASSIGNMENT1.txt  CMakeLists.txt  bullscows.c
exam/: before_after.xcf
exam/e200604/: CMakeLists.txt  f1.c  f2.c  f3.c  f4.c  f5.c  f6.c  f7.c  f8.c  f9.c
gameoflife/: ASSIGNMENT2.txt  CMakeLists.txt  game_of_life.c  game_of_life.h  main.c  test.c
snake5/: ASSIGNMENT3.txt  CMakeLists.txt  main.c  snake.c  snake.h  test.c
